--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,9 @@ ul {
   bottom: -1%;
   width: 30%;
 }
+.txt_shadow {
+  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+}
 .tree_left {
   left: 0;
   bottom: -2%;
